--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "awesome-book-project",
-  "main": "index.js",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -19,6 +18,8 @@
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
     "format": "npx prettier  --write **/*.{html,json,md,json,yaml,yml,jsx}",
     "format:check": "npx prettier  --check **/*.{html,json,md,json,yaml,yml}",
     "lint": "npx stylelint \"**/*.css\" --fix && npx eslint . --fix",
@@ -26,8 +27,7 @@
   },
   "browserslist": [
     "defaults",
-    "not IE 11",
-    "maintained node versions"
+    "not IE 11"
   ],
   "dependencies": {
     "luxon": "^2.4.0"
