--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "devDependencies": {
     "@babel/core": "7.x",
     "@babel/eslint-parser": "^7.x",
+    "css-loader": "^6.7.1",
     "eslint": "^8.x",
     "eslint-config-airbnb-base": "^15.x",
     "eslint-plugin-import": "^2.25.4",
     "hint": "^6.1.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "prettier": "1.18.2",
+    "style-loader": "^3.3.1",
     "stylelint": "^14.x",
     "stylelint-config-recommended": "^6.x",
     "stylelint-config-standard": "^24.x",
