--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,11 @@
 .env.production.local
 private_key.json
 .env
-.dist/
+.dist
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 bundle.js
 main.css
+minify.html
