--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-config-airbnb-base": "^15.x",
     "eslint-plugin-import": "^2.25.4",
     "hint": "^6.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "1.18.2",
     "style-loader": "^3.3.1",
