--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hint": "^6.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "1.18.2",
     "style-loader": "^3.3.1",
     "stylelint": "^14.x",
@@ -33,6 +34,7 @@
     "not IE 11"
   ],
   "dependencies": {
+    "cssnano": "^5.1.8",
     "luxon": "^2.4.0"
   }
 }
