--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.x",
     "@babel/eslint-parser": "^7.x",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "eslint": "^8.x",
     "eslint-config-airbnb-base": "^15.x",
     "eslint-plugin-import": "^2.25.4",
@@ -20,7 +21,8 @@
     "stylelint-config-standard": "^24.x",
     "stylelint-csstree-validator": "^1.8.0",
     "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-fix-style-only-entries": "^0.6.1"
   },
   "scripts": {
     "build": "webpack",
