--- a/package.json
+++ b/package.json
@@ -5,15 +5,10 @@
   "devDependencies": {
     "@babel/core": "7.x",
     "@babel/eslint-parser": "^7.x",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
     "eslint": "^8.x",
     "eslint-config-airbnb-base": "^15.x",
     "eslint-plugin-import": "^2.25.4",
     "hint": "^6.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "1.18.2",
     "style-loader": "^3.3.1",
     "stylelint": "^14.x",
@@ -25,7 +20,8 @@
     "webpack-fix-style-only-entries": "^0.6.1"
   },
   "scripts": {
-    "build": "webpack",
+    "start": "webpack serve --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "format": "npx prettier  --write **/*.{html,json,md,json,yaml,yml,jsx}",
     "format:check": "npx prettier  --check **/*.{html,json,md,json,yaml,yml}",
     "lint": "npx stylelint \"**/*.css\" --fix && npx eslint . --fix",
@@ -36,7 +32,14 @@
     "not IE 11"
   ],
   "dependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "cssnano": "^5.1.8",
-    "luxon": "^2.4.0"
+    "html-webpack-plugin": "^5.5.0",
+    "luxon": "^2.4.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "webpack-merge": "^5.8.0"
   }
 }
