--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "stylelint-csstree-validator": "^1.8.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0",
     "webpack-fix-style-only-entries": "^0.6.1"
   },
   "scripts": {
@@ -41,6 +42,7 @@
     "mini-css-extract-plugin": "^2.6.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "webpack-merge": "^5.8.0",
+    "workbox-precaching": "^6.5.3",
     "workbox-webpack-plugin": "^6.5.3"
   }
 }
