--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build": "webpack --config webpack.prod.js",
     "format": "npx prettier  --write **/*.{html,json,md,json,yaml,yml,jsx}",
     "format:check": "npx prettier  --check **/*.{html,json,md,json,yaml,yml}",
+    "lighthouse": "npx lighthouse http://localhost:1981/ --view --chrome-flags=\"--headless\" --output-path=./lighthouse/lighthouse_\"$(date \"+%Y-%m-%d_%H-%M-%S\")\".report.html",
     "lint": "npx stylelint \"**/*.css\" --fix && npx eslint . --fix",
     "lint:check": "npx stylelint \"**/*.css\" && npx eslint ."
   },
@@ -43,6 +44,7 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "webpack-merge": "^5.8.0",
     "workbox-precaching": "^6.5.3",
+    "copy-webpack-plugin": "^11.0.0",
     "workbox-webpack-plugin": "^6.5.3"
   }
 }
