--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   ],
   "dependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "cssnano": "^5.1.8",
@@ -42,9 +43,9 @@
     "luxon": "^2.4.0",
     "mini-css-extract-plugin": "^2.6.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "terser-webpack-plugin": "^5.3.1",
     "webpack-merge": "^5.8.0",
     "workbox-precaching": "^6.5.3",
-    "copy-webpack-plugin": "^11.0.0",
     "workbox-webpack-plugin": "^6.5.3"
   }
 }
