--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-import": "^2.25.4",
     "hint": "^6.1.0",
     "jest": "^28.1.0",
+    "jest-localstorage-mock": "^2.4.21",
     "prettier": "1.18.2",
     "style-loader": "^3.3.1",
     "stylelint": "^14.x",
