--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -3,6 +3,11 @@ name: Checks
 on: [pull_request, push]
 
 jobs:
+  jest:
+    name: Jest
+    runs-on: ubuntu-18.04
+    if: always()
+    
   prettier:
     name: Prettier
     runs-on: ubuntu-latest
