--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@babel/eslint-parser": "^7.x",
     "@babel/plugin-transform-modules-commonjs": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
+    "axios-mock-adapter": "^1.21.1",
     "babel-jest": "^28.1.0",
     "eslint": "^8.x",
     "eslint-config-airbnb-base": "^15.x",
     "eslint-plugin-import": "^2.25.4",
     "hint": "^6.1.0",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.1",
     "jest-localstorage-mock": "^2.4.21",
     "prettier": "1.18.2",
     "style-loader": "^3.3.1",
@@ -39,12 +41,15 @@
     "not IE 11"
   ],
   "dependencies": {
+    "axios": "^0.27.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "cssnano": "^5.1.8",
     "html-webpack-plugin": "^5.5.0",
+    "jsdom": "^19.0.0",
+    "jsdom-mount": "^0.1.0",
     "luxon": "^2.4.0",
     "mini-css-extract-plugin": "^2.6.0",
     "terser-webpack-plugin": "^5.3.1",
